# src-multislope-adc

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
examples/: .gitignore  README.md  bom.ini  simple.kicad_pcb  simple.kicad_pro  simple.kicad_sch  simple.rs
rtl/: .gitignore  Makefile  ice40_breakout.pcf  ice40_components.vhd  spi_slave.vhd  test.vhd  top.vhd
rtl/delta_sigma/: Makefile  boxcar.vhd  converter.vhd  delta_sigma.vhd  sampler.vhd  sinc3.vhd
rtl/delta_sigma/test/: tb_sinc3.vhd
rtl/delta_sigma/tests/: tb_sinc3.vhd  test_delta_sigma.py
rtl/multislope/: Makefile  multislope.vhd
rtl/multislope/test/: tb_multislope.ghw  tb_multislope.vhd
rtl/multislope/tests/: tb_multislope.vhd  test_multislope.py
rtl/spi_controller/: axi4l_bridge.vhd  sim_spi.vhd
rtl/spi_controller/tests/: test_axi4l_bridge.py  test_axi4l_bridge.vhd
src/: lib.rs  main.rs
tests/: hardware.rs  simulation.rs
